objects/vlocity_cmt__CustomerInteraction__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Interactions</relationshipLabel>
        <relationshipName>CustomerInteractions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Rep</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Interactions</relationshipLabel>
        <relationshipName>CustomerInteractions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DurationInMinute__c</fullName>
        <formula>IF( AND(NOT(ISNULL( vlocity_cmt__EndDateTime__c )),NOT(ISNULL( vlocity_cmt__StartDateTime__c ))) ,  (vlocity_cmt__EndDateTime__c -  vlocity_cmt__StartDateTime__c)*24*60 , IF(AND(ISNULL( vlocity_cmt__EndDateTime__c ), NOT(ISNULL( vlocity_cmt__StartDateTime__c ))), ( NOW() - vlocity_cmt__StartDateTime__c)*24*60, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDateTime__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartDateTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting On Someone Else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VerificationTimestamp__c</fullName>
        <label>Verification Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VerifiedAgentName__c</fullName>
        <label>Verified Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Interaction</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>vlocity_cmt__AccountId__c</columns>
        <columns>vlocity_cmt__Channel__c</columns>
        <columns>vlocity_cmt__ContactId__c</columns>
        <columns>vlocity_cmt__Comments__c</columns>
        <columns>vlocity_cmt__DurationInMinute__c</columns>
        <columns>vlocity_cmt__EndDateTime__c</columns>
        <columns>vlocity_cmt__StartDateTime__c</columns>
        <columns>vlocity_cmt__Status__c</columns>
        <columns>vlocity_cmt__Type__c</columns>
        <columns>vlocity_cmt__VerifiedAgentName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Interaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>